# gadfaststyle

./: .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  CODESTYLE.md  README.md  TESTING.md  alembic.ini  main.py  pyproject.toml  requirements.txt
.ai/: README.md  instruction.md  rules.md
.ai/agents/: 10-delivery-manager.md  20-project-architect.md  30-task-orchestrator.md  40-code-implementer.md  50-test-writer.md  60-code-reviewer.md  70-report-compiler.md  INSTRUCTION.MD  RULES.MD
.ai/architecture/: application.md  common.md  domain.md  http.md  infrastructure.md  instruction.md  tests.md
.ai/engine/: README.md  main.py  pyproject.toml
.ai/knowledge/: INSTRUCTION.MD  RULES.MD  instruction.md  rules.md
.ai/reports/: README.md  instruction.md
.ai/rules/: core.mdc  python.mdc
.ai/runtime/: instruction.md
.ai/spec/: instruction.md  models.yaml  pipeline.yaml  settings.yaml
.claude/agents/: backend.md  code-implementer.md  code-reviewer.md  delivery-manager.md  project-architect.md  report-compiler.md  spec-sync.md  system-analyst.md  task-orchestrator.md  team-lead.md  test-writer.md  tester.md
.claude/commands/: code.md  codegen.md  sync.md
.codex/: README.md
.codex/agents/: README.md
.codex/commands/: README.md
.codex/runtime/: README.md
.codex/tasks/: README.md
.compose/: docker-compose.yml
.instructions/: README.md  spec.md  src.md  tests.md
.instructions/specs/: README.md
.instructions/src/: README.md
.instructions/tests/: README.md
.templates/: README.md  module.toml  project.toml
tests/: conftest.py  faker.py
(+1353 files in other folders)
