[project]
name = "gadfaststyle"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aioboto3>=15.5.0",
    "aiofiles>=25.1.0",
    "aiogram>=3.26.0",
    "alembic>=1.18.4",
    "apscheduler>=3.11.2",
    "asyncpg>=0.31.0",
    "fastapi>=0.135.1",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "pycryptodome>=3.23.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "pyjwt>=2.12.0",
    "python-multipart>=0.0.22",
    "redis>=7.3.0",
    "rfc3986>=2.0.0",
    "sentry-sdk>=2.54.0",
    "sqlalchemy>=2.0.48",
    "telethon>=1.42.0",
    "types-aiofiles>=25.1.0.20251011",
    "uvicorn>=0.41.0",
]

[dependency-groups]
dev = [
    "isort>=8.0.1",
    "mypy>=1.19.1",
    "ruff>=0.15.5",
    "ty>=0.0.21",
    "typer>=0.24.1",
]
test = [
    "factory-boy>=3.3.3",
    "faker>=40.8.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
